Se cambio la informacion de la página nosotros. Se agrego una clase para agregar negritas a las preguntas de la página nosotros. Se cambio y se borro una foto

--- a/nosotros.html
+++ b/nosotros.html
@@ -38,27 +38,17 @@
       <h2 class="centrar-texto">Nosotros</h2>
       <div class="nosotros-cont">
         <div class="imagen-nosotros">
-          <img src="img/nosotros1.jpg" alt="Imagen de Nosotros" />
+          <img src="img/nana-foto.jpg" alt="Foto de Marta Castillo" />
         </div>
         <div class="texto-nosotros">
           <p>
-            Donec eget sem sed sem varius ornare. Morbi aliquet tellus est, eu
-            elementum tortor mollis quis. Cras vitae risus sodales, finibus
-            metus in, feugiat ante. Sed et tempor quam, eget ultrices nunc.
-            Praesent finibus ultricies leo. Quisque commodo eget massa at
-            euismod. In ut orci congue, iaculis libero at, vulputate neque. Ut
-            sed dapibus tellus, non pulvinar ligula. Mauris et odio neque.
-            Praesent arcu ligula, lobortis eget dignissim nec, viverra id elit.
-            In libero nisl, hendrerit ut congue non, auctor a justo. Nullam
-            vitae erat dignissim, pellentesque neque quis, dignissim est. Sed
-            posuere imperdiet neque et eleifend.
+            <span>¿Quién es Marta?</span> Martha es una humilde Persona que ama la cocina y que ama hacer tamales.
+            Ella es una madre de familia que tiene 4 hijos, fueron una familia  de pocos recursos pero gracias a que siempre
+            fue trabajadora los saco adelante, ahora ellos son padres y madres de familia y estan siguiendo el ejemplo de su mamá. 
           </p>
           <p>
-            Aenean et sem fermentum, posuere metus sed, pretium mauris. Mauris
-            convallis pulvinar sagittis. Proin dictum odio sed fermentum
-            ultrices. Quisque venenatis velit metus, elementum feugiat erat
-            lobortis eget. Integer sit amet erat nisl. Aliquam erat volutpat.
-            Nunc vel libero ac purus tincidunt condimentum.
+            <span>¿Por qué se hizo esta página?</span> Marta siempre a sido ha hecho tamales para su familia, y alguien de su familia le propuso
+            esta idea, de crear una página web para que ella pudiera vender sus tamales y para que supiera todo el mundo de lo delicioso que están. 
           </p>
         </div>
         <!--texto-nosotros-->
