Style: Se agrego un margin-bottom index: se agrego una clase al boton de nosotros.

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             Mauris dignissim rutrum urna, vitae venenatis nunc maximus id. Nam
             dapibus laoreet magna ut scelerisque.
           </p>
-          <a href="nosotros.html" class="btn btn-secundario">ver más</a>
+          <a href="nosotros.html" class="btn btn-secundario mb-2">ver más</a>
         </div>
         <!--Nosotros-texto-->
       </div>
