Se agrego un color al H2 y al label de formulario

--- a/contacto.html
+++ b/contacto.html
@@ -35,7 +35,7 @@
       <!--contenedor -->
     </header>
     <main class="contenedor section contenido-centrado">
-      <h2 class="m-0 centrar-texto">Llenar formulario</h2>
+      <h2 class="m-0 centrar-texto color-naranaja">Llenar formulario</h2>
       <form action="">
         <fieldset>
           <legend>Información Personal</legend>
