Se agrego el tittle correspodiente de cada página

--- a/producto1.html
+++ b/producto1.html
@@ -9,7 +9,7 @@
     />
    
     <link rel="stylesheet" href="css/style.css" />
-    <title>Productos</title>
+    <title>Tamal de Carne</title>
   </head>
   <body>
     <header class="site-header">
