Cambios en el style y en el header de las paginas externas.

--- a/nosotros.html
+++ b/nosotros.html
@@ -11,7 +11,7 @@
     <title>Nosotros</title>
   </head>
   <body>
-    <header class="site-header">
+    <header class="site-externas">
       <div class="contenedor">
         <div class="barra">
           <a href="index.html">
@@ -24,12 +24,6 @@
           </nav>
         </div>
         <!--Barra-->
-        <div class="texto-header">
-          <p class="m-0 blanco">
-            Aquí encontraras los mejores tamales del estado de Baja California
-            Sur
-          </p>
-        </div>
         <!--Barra-->
       </div>
       <!--contenedor -->
@@ -42,7 +36,7 @@
         </div>
         <div class="texto-nosotros">
           <p>
-            <span>¿Quién es Marta?</span> Martha es una humilde Persona que ama la cocina y que ama hacer tamales.
+            <span>¿Quién es Marta?</span> Marta es una humilde Persona que ama la cocina y que ama hacer tamales.
             Ella es una madre de familia que tiene 4 hijos, fueron una familia  de pocos recursos pero gracias a que siempre
             fue trabajadora los saco adelante, ahora ellos son padres y madres de familia y estan siguiendo el ejemplo de su mamá. 
           </p>
