--- a/producto.html
+++ b/producto.html
@@ -11,7 +11,7 @@
     <title>Productos</title>
   </head>
   <body>
-    <header class="site-header">
+    <header class="site-externas">
       <div class="contenedor">
         <div class="barra">
           <a href="index.html">
@@ -22,13 +22,6 @@
             <a href="producto.html">Producto</a>
             <a href="contacto.html">Contacto</a>
           </nav>
-        </div>
-        <!--Barra-->
-        <div class="texto-header">
-          <p class="m-0 blanco">
-            Aquí encontraras los mejores tamales del estado de Baja California
-            Sur
-          </p>
         </div>
         <!--Barra-->
       </div>
