--- a/producto1.html
+++ b/producto1.html
@@ -12,7 +12,7 @@
     <title>Tamal de Carne</title>
   </head>
   <body>
-    <header class="site-header">
+    <header class="site-externas">
       <div class="contenedor">
         <div class="barra">
           <a href="index.html">
@@ -25,12 +25,6 @@
           </nav>
         </div>
         <!--Barra-->
-        <div class="texto-header">
-          <p class="m-0 blanco">
-            Aquí encontraras los mejores tamales del estado de Baja California
-            Sur
-          </p>
-        </div>
         <!--Barra-->
       </div>
       <!--contenedor -->
