Se agrego una nueva pagina llamada galeria. Se elimanaron 3 fotos.

--- a/galeria.html
+++ b/galeria.html
@@ -29,73 +29,48 @@
       <!--contenedor -->
     </header>
     <main class="contenedor section contenido-principal">
-      <h2 class="m-0 centrar-texto">Tamales</h2>
+      <h2 class="m-0 centrar-texto">Galeria de fotos</h2>
       <div class="contenedor-anuncios">
         <!--Anuncio-->
         <div class="anuncio">
           <div class="imagen">
-            <img src="img/tamal-1.jpg" alt="Tamales" />
-          </div>
-          <div class="texto-anuncio">
-            <p class="m-0">Nombre: Tamal de Carne</p>
-            <p class="m-0">Precio: $25</p>
-            <a href="producto1.html" class="btn btn-secundario">Ver más</a>
+            <img src="img/marta2.jpg" alt="Foto grafia de Marta" />
           </div>
         </div>
         <!--Anuncio-->
         <div class="anuncio">
           <div class="imagen">
-            <img src="img/tamall-2.jpg" alt="Tamales" />
-          </div>
-          <div class="texto-anuncio">
-            <p class="m-0">Nombre: Tamal de Frijol</p>
-            <p class="m-0">Precio: $30</p>
-            <a href="producto1.html" class="btn btn-secundario">Ver más</a>
+            <img src="img/marta3.jpg" alt="Foto grafia de Marta" />
           </div>
         </div>
         <!--Anuncio-->
         <div class="anuncio">
           <div class="imagen">
-            <img src="img/tamal-6.jpg" alt="Tamales" />
-          </div>
-          <div class="texto-anuncio">
-            <p class="m-0">Nombre: Tamal de Elote</p>
-            <p class="m-0">Precio: $25</p>
-            <a href="producto1.html" class="btn btn-secundario">Ver más</a>
+            <img src="img/marta4.jpg" alt="Foto grafia de Marta" />
           </div>
         </div>
         <div class="anuncio">
           <div class="imagen">
-            <img src="img/tamal-3.jpg" alt="Tamales" />
-          </div>
-          <div class="texto-anuncio">
-            <p class="m-0">Nombre: Tamal de Carne</p>
-            <p class="m-0">Precio: $25</p>
-            <a href="producto1.html" class="btn btn-secundario">Ver más</a>
+            <img src="img/marta5.jpg" alt="Foto grafia de Marta" />
           </div>
         </div>
         <!--Anuncio-->
         <div class="anuncio">
           <div class="imagen">
-            <img src="img/tamal-4.jpg" alt="Tamales" />
-          </div>
-          <div class="texto-anuncio">
-            <p class="m-0">Nombre: Tamal de Frijol</p>
-            <p class="m-0">Precio: $30</p>
-            <a href="producto1.html" class="btn btn-secundario">Ver más</a>
+            <img src="img/marta6.jpg" alt="Foto grafia de Marta" />
           </div>
         </div>
         <!--Anuncio-->
         <div class="anuncio">
           <div class="imagen">
-            <img src="img/tamal-5.jpg" alt="Tamales" />
-          </div>
-          <div class="texto-anuncio">
-            <p class="m-0">Nombre: Tamal de Elote</p>
-            <p class="m-0">Precio: $25</p>
-            <a href="producto1.html" class="btn btn-secundario">Ver más</a>
+            <img src="img/marta7.jpg" alt="Foto grafia de Marta" />
           </div>
         </div>
+        <div class="anuncio">
+            <div class="imagen">
+              <img src="img/marta8.jpg" alt="Foto grafia de Marta" />
+            </div>
+          </div>
       </div>
       <!--contenido-principal-->
     </main>
@@ -103,7 +78,7 @@
       <div class="barra contenedor">
         <p class="centrar-texto blanco">Derechos de autor</p>
         <nav class="navegacion-footer">
-          <a href="nosotros.html">Nosotros</a>
+            <a href="nosotros.html">Nosotros</a>
             <a href="producto.html">Producto</a>
             <a href="contacto.html">Contacto</a>
             <a href="galeria.html">Galeria</a>
