--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
             <a href="nosotros.html">Nosotros</a>
             <a href="producto.html">Producto</a>
             <a href="contacto.html">Contacto</a>
+            <a href="galeria.html">Galeria</a>
           </nav>
         </div>
         <!--Barra-->
@@ -95,8 +96,9 @@
         <p class="centrar-texto blanco">Derechos de autor</p>
         <nav class="navegacion-footer">
           <a href="nosotros.html">Nosotros</a>
-          <a href="producto.html">Producto</a>
-          <a href="contacto.html">Contacto</a>
+            <a href="producto.html">Producto</a>
+            <a href="contacto.html">Contacto</a>
+            <a href="galeria.html">Galeria</a>
         </nav>
       </div>
       <!--Barra contenedor-->
