--- a/galeria.html
+++ b/galeria.html
@@ -8,7 +8,7 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="css/style.css" />
-    <title>Productos</title>
+    <title>Galeria de fotos</title>
   </head>
   <body>
     <header class="site-externas">
